Fixing odata social media tags

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <footer>
   <div class="footer">
-    Copyright © 2023
-    <a href="https://github.com/TomBillingtonUK">Thomas Billington</a>.
+    Copyright © {{ 'now' | date: "%Y" }} Incentive Marketing Ltd. All rights reserved
   </div>
 </footer>
