fix bug in odata tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
   <meta property="og:type" content="website, blog" />
 
   {% if page.image %}
-    <meta property="og:image" content="{{ site.url }}/{ page.image }}" />
+    <meta property="og:image" content="{{ site.url }}/{{ page.image }}" />
     <meta property="og:width" content="{{ page.imageWidth }}" />
     <meta property="og:height" content="{{ page.imageHeight }}" />
   {% endif %}
