--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,10 @@ layout: page
   <i class="fas fa-chevron-up"></i>
 </div>
 
+<div id="mailchimp-post">
+  {% include mailchimp.html %}
+</div>
+
 <!-- Disqus -->
 {% if site.theme_settings.disqus_shortname and page.comments %}
 <div id="comments">
