--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,8 +43,8 @@
 
   {% if page.image %}
     <meta property="og:image" content="{{ site.url }}/{{ page.image }}" />
-    <meta property="og:width" content="{{ page.imageWidth }}" />
-    <meta property="og:height" content="{{ page.imageHeight }}" />
+    <meta property="og:image:width" content="{{ page.imageWidth }}" />
+    <meta property="og:image:height" content="{{ page.imageHeight }}" />
   {% endif %}
 
   <meta property="og:site_name" content="{{ site.theme_settings.title }}" />
